syntax = "proto3";

package inquiry_service;

option go_package = "github.com/SUOKE2024/suoke_life/inquiry-service/api/grpc";

import "google/protobuf/timestamp.proto";

// 问诊服务 - 负责对话交互和问诊信息采集与分析
service InquiryService {
  // 进行对话问诊
  rpc ConductInquiry(InquiryRequest) returns (InquiryResponse);
  
  // 分析症状
  rpc AnalyzeSymptoms(SymptomsRequest) returns (SymptomsAnalysisResponse);
  
  // 获取问诊建议问题
  rpc GetSuggestedQuestions(SuggestedQuestionsRequest) returns (SuggestedQuestionsResponse);
  
  // 分析病史数据
  rpc AnalyzeMedicalHistory(MedicalHistoryRequest) returns (MedicalHistoryAnalysisResponse);

  // 服务健康检查
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// 问诊请求
message InquiryRequest {
  string user_id = 1;                // 用户ID
  string session_id = 2;             // 会话ID
  
  oneof input {
    string user_message = 3;         // 用户消息
    bytes voice_data = 4;            // 语音数据
  }
  
  repeated string previous_messages = 5; // 之前的对话历史
  int32 max_response_tokens = 6;     // 最大响应长度
  bool stream_response = 7;          // 是否使用流式响应
  bool include_analysis = 8;         // 是否包含分析结果
  map<string, string> metadata = 9;  // 元数据
}

// 问诊响应
message InquiryResponse {
  string inquiry_id = 1;             // 问诊ID
  string response = 2;               // 问诊响应
  float confidence = 3;              // 置信度
  
  // 提取的健康信息
  repeated HealthInfo extracted_info = 4;
  
  // 识别的症状
  repeated SymptomInfo symptoms = 5;
  
  // 辨证参考
  repeated SyndromeReference syndrome_references = 6;
  
  // 建议的后续问题
  repeated SuggestedQuestion follow_up_questions = 7;
  
  string detailed_analysis = 8;      // 详细分析(JSON格式)
  map<string, string> metadata = 9;  // 元数据
  int64 timestamp = 10;              // 时间戳
}

// 健康信息
message HealthInfo {
  string category = 1;               // 类别
  string key = 2;                    // 键
  string value = 3;                  // 值
  float confidence = 4;              // 置信度
  string source = 5;                 // 信息来源
}

// 症状信息
message SymptomInfo {
  string name = 1;                   // 症状名称
  string description = 2;            // 症状描述
  enum Severity {
    UNKNOWN = 0;
    MILD = 1;
    MODERATE = 2;
    SEVERE = 3;
  }
  Severity severity = 3;             // 严重程度
  int32 duration_days = 4;           // 持续天数
  repeated string related_symptoms = 5; // 相关症状
  repeated string possible_causes = 6;  // 可能原因
  float confidence = 7;              // 置信度
}

// 证型参考
message SyndromeReference {
  string syndrome_name = 1;          // 证型名称
  float relevance = 2;               // 相关性
  repeated string matching_symptoms = 3; // 匹配的症状
  string description = 4;            // 描述
}

// 建议问题
message SuggestedQuestion {
  string question = 1;               // 问题内容
  string purpose = 2;                // 提问目的
  float importance = 3;              // 重要性(0-1)
  string category = 4;               // 问题类别
}

// 症状分析请求
message SymptomsRequest {
  string user_id = 1;                // 用户ID
  string session_id = 2;             // 会话ID
  repeated string symptoms = 3;      // 症状列表
  map<string, string> symptom_details = 4; // 症状详情
  map<string, string> metadata = 5;  // 元数据
}

// 症状分析响应
message SymptomsAnalysisResponse {
  string analysis_id = 1;            // 分析ID
  repeated SyndromeReference syndromes = 2; // 相关证型
  float confidence = 3;              // 置信度
  string analysis_summary = 4;       // 分析总结
  string detailed_analysis = 5;      // 详细分析(JSON格式)
  map<string, string> metadata = 6;  // 元数据
  int64 timestamp = 7;               // 时间戳
}

// 建议问题请求
message SuggestedQuestionsRequest {
  string user_id = 1;                // 用户ID
  string session_id = 2;             // 会话ID
  repeated string current_symptoms = 3; // 当前症状
  repeated string previous_questions = 4; // 之前的问题
  string inquiry_focus = 5;          // 问诊重点
  map<string, string> metadata = 6;  // 元数据
}

// 建议问题响应
message SuggestedQuestionsResponse {
  repeated SuggestedQuestion questions = 1; // 建议问题列表
  string reasoning = 2;              // 推理过程
  map<string, string> metadata = 3;  // 元数据
}

// 病史分析请求
message MedicalHistoryRequest {
  string user_id = 1;                // 用户ID
  
  // 慢性病史
  repeated ChronicDisease chronic_diseases = 2;
  
  // 过敏史
  repeated Allergy allergies = 3;
  
  // 家族病史
  repeated FamilyHistory family_history = 4;
  
  // 手术史
  repeated Surgery surgeries = 5;
  
  // 用药史
  repeated Medication medications = 6;
  
  map<string, string> metadata = 7;  // 元数据
}

// 慢性病
message ChronicDisease {
  string name = 1;                   // 疾病名称
  int32 diagnosis_year = 2;          // 诊断年份
  string status = 3;                 // 目前状态
  string treatment = 4;              // 治疗方案
}

// 过敏
message Allergy {
  string allergen = 1;               // 过敏原
  string reaction = 2;               // 过敏反应
  string severity = 3;               // 严重程度
}

// 家族病史
message FamilyHistory {
  string disease = 1;                // 疾病名称
  string relation = 2;               // 亲属关系
  int32 onset_age = 3;               // 发病年龄
}

// 手术
message Surgery {
  string name = 1;                   // 手术名称
  int32 year = 2;                    // 手术年份
  string reason = 3;                 // 手术原因
}

// 用药
message Medication {
  string name = 1;                   // 药物名称
  string dosage = 2;                 // 剂量
  string frequency = 3;              // 频率
  string purpose = 4;                // 用途
  bool current = 5;                  // 是否当前用药
}

// 病史分析响应
message MedicalHistoryAnalysisResponse {
  string analysis_id = 1;            // 分析ID
  
  // 风险因素
  repeated RiskFactor risk_factors = 2;
  
  // 健康模式
  repeated HealthPattern health_patterns = 3;
  
  // 体质倾向
  repeated ConstitutionTendency constitution_tendencies = 4;
  
  string analysis_summary = 5;       // 分析总结
  float confidence = 6;              // 置信度
  string detailed_analysis = 7;      // 详细分析(JSON格式)
  map<string, string> metadata = 8;  // 元数据
  int64 timestamp = 9;               // 时间戳
}

// 风险因素
message RiskFactor {
  string name = 1;                   // 名称
  string description = 2;            // 描述
  enum Severity {
    UNKNOWN = 0;
    LOW = 1;
    MODERATE = 2;
    HIGH = 3;
  }
  Severity severity = 3;             // 严重程度
  repeated string related_conditions = 4; // 相关疾病
  repeated string prevention_suggestions = 5; // 预防建议
}

// 健康模式
message HealthPattern {
  string pattern_name = 1;           // 模式名称
  string description = 2;            // 描述
  float confidence = 3;              // 置信度
  repeated string evidence = 4;      // 证据
}

// 体质倾向
message ConstitutionTendency {
  string constitution_type = 1;      // 体质类型
  float probability = 2;             // 概率
  repeated string evidence = 3;      // 证据
  string description = 4;            // 描述
}

// 健康检查请求
message HealthCheckRequest {
  bool include_details = 1;          // 是否包含详细信息
}

// 健康检查响应
message HealthCheckResponse {
  enum Status {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  
  Status status = 1;                 // 服务状态
  map<string, string> details = 2;   // 详细信息
} 